Memperbaiki beberapa hal yang kurang

--- a/artikel.html
+++ b/artikel.html
@@ -42,10 +42,10 @@
                         <a class="nav-link" aria-current="page" href="index.html">Beranda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#tentang">Tentang</a>
+                        <a class="nav-link" href="/index.html#tentang">Tentang</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#produk">Produk</a>
+                        <a class="nav-link" href="/index.html#produk">Produk</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Artikel</a>
@@ -80,7 +80,7 @@
             </a>
                         <p class="card-text">
                             Menjalankan bisnis saat ini tidak harus selalu punya lapak sendiri, dalam arti hanya dengan di
-                            rumah saja Anda sudah bisa berbisnis dengan modal yang kecil.
+                            rumah saja Anda sudah bisa berbisnis dengan modal yang kecil [<a href="/artikel/bisnis-rumahan-yang-lagi-trend.html">Baca Selengkapnya</a>]
                         </p>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                     </a>
                     <p class="card-text">
                         Salacca zalacca atau dikenal dengan buah salak merupakan buah tropis yang juga menjadi buah asli Indonesia. Salak
-                        awalnya ditemukan tumbuh liar di alam di Jawa bagian barat daya dan Sumatra.
+                        awalnya ditemukan tumbuh liar di alam di Jawa [<a href="/artikel/ide-olahan-salak-yang-bisa-anda-coba.html">Baca Selengkapnya</a>]
                     </p>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                 </a>
                         <p class="card-text">
                             Bagi sebagian orang, makan hasil masakan sendiri itu lebih merasa memuaskan apalagi jika masakannya itu mirip
-                            dengan produk yang laris. Artinya hasil masakannya sudah sangat enak.
+                            dengan produk yang laris. Artinya hasil masakannya [<a href="/artikel/resep-ayam-geprek-pedas.html">Baca Selengkapnya</a>]
                         </p>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                 </a>
                         <p class="card-text">
                             Jika Anda salah satu yang termasuk pelaku UMKM, tentu saja produk yang Anda buat ingin menjangkau konsumen lebih luas
-                            bukan? Salah satu cara untuk mengenalkan produk dengan jangkauan yang luas.
+                            bukan? Salah satu cara untuk mengenalkan produk [<a href="/artikel/platform-online-untuk-umkm.html">Baca Selengkapnya</a>]
                         </p>
                     </div>
                 </div>
