--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
                         <div class="card h-100">
                             <img src="img/produk/Make Sans/Produk Make Sans.png" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title"><a href="#">Make San's</a></h5>
+                                <h5 class="card-title"><a href="/produk/produk-make-sans.html">Make San's</a></h5>
                                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
                                     content. This content is a little bit longer.</p>
                                     <div class="d-grid gap-2">
-                                        <button class="btn btn-success tombol" type="button"><a href="#">Menu</a></button>
+                                        <button class="btn btn-success tombol" type="button"><a href="/produk/produk-make-sans.html">Menu</a></button>
                                     </div>
                                 </div>
                             </div>
@@ -213,12 +213,12 @@
                                 <div class="card h-100">
                                     <img src="img/produk/Mas Ipul/Produk Mas Ipul 6.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title"><a href="#">Mas Ipul</a></h5>
+                                        <h5 class="card-title"><a href="/produk/produk-mas-ipul.html">Mas Ipul</a></h5>
                                         <p class="card-text">
-                                            Pengrajin berbagai macam kandang burung
+                                            Pengrajin berbagai macam kandang burung dengan motif yang menarik. Harga mulai Rp125.000.
                                         </p>
                                             <div class="d-grid gap-2">
-                                                <button class="btn btn-success tombol" type="button"><a href="#">Lihat Produk</a></button>
+                                                <button class="btn btn-success tombol" type="button"><a href="/produk/produk-mas-ipul.html">Lihat Produk</a></button>
                                             </div>
                                         </div>
                                     </div>
@@ -243,14 +243,15 @@
                                 <div class="card h-100">
                                     <img src="img//produk/Make Sans/Produk Laundry.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title"><a href="#">Laundry Bu Santi</a></h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                                            content. This content is a little bit longer.</p>
-                                            <div class="d-grid gap-2">
-                                                <button class="btn btn-success tombol" type="button"><a href="#">Pesan Sekarang</a></button>
-                                            </div>
+                                        <h5 class="card-title"><a href="https://goo.gl/maps/WDNsMSkt9WiiRmq77">Laundry Bu Santi</a></h5>
+                                        <p class="card-text">
+                                            Menerima laundry cuci & setrika maupun hanya setrika saja. Harga mulai Rp3.000/kg.
+                                        </p>
+                                        <div class="d-grid gap-2">
+                                            <button class="btn btn-success tombol" type="button"><a href="https://wa.me/6281326486425">Pesan Sekarang</a></button>
                                         </div>
                                     </div>
+                                </div>
                             </div>
                             <div class="col">
                                 <div class="card h-100">
