--- a/produk/produk-make-sans.html
+++ b/produk/produk-make-sans.html
@@ -42,10 +42,10 @@
                         <a class="nav-link" aria-current="page" href="../index.html">Beranda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#tentang">Tentang</a>
+                        <a class="nav-link" href="../index.html#tentang">Tentang</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#produk">Produk</a>
+                        <a class="nav-link" href="../index.html#produk">Produk</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../artikel.html">Artikel</a>
@@ -57,7 +57,7 @@
     <!-- Navbar End -->
 
     <!-- List Produk -->
-    <div class="produk" id="produk">
+    <div class="produk produk-list" id="produk">
         <div class="container">
             <h2>Produk Make San's</h2>
             <div class="imageProduk"></div>
@@ -74,10 +74,11 @@
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                                             content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                            <a href="https://goo.gl/maps/WDNsMSkt9WiiRmq77"><button class="btn btn-success tombol" type="button">View Map</button></a>
+                                            <a href="https://wa.me/6281326486425"><button class="btn btn-success tombol" type="button">Hubungi</button></a>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
                         </div>
                     </div>
                     <div class="container">
@@ -91,13 +92,14 @@
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                                             content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                            <a href="https://goo.gl/maps/WDNsMSkt9WiiRmq77"><button class="btn btn-success tombol" type="button">View Map</button></a>
+                                            <a href="https://wa.me/6281326486425"><button class="btn btn-success tombol" type="button">Hubungi</button></a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="container">
+                        <div class="container">
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -108,12 +110,13 @@
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                                             content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                            <a href="https://goo.gl/maps/WDNsMSkt9WiiRmq77"><button class="btn btn-success tombol" type="button">View Map</button></a>
+                                            <a href="https://wa.me/6281326486425"><button class="btn btn-success tombol" type="button">Hubungi</button></a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                     <div class="container">
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
@@ -125,12 +128,13 @@
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                                             content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                            <a href="https://goo.gl/maps/WDNsMSkt9WiiRmq77"><button class="btn btn-success tombol" type="button">View Map</button></a>
+                                            <a href="https://wa.me/6281326486425"><button class="btn btn-success tombol" type="button">Hubungi</button></a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                     <div class="container">
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
@@ -142,10 +146,11 @@
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                                             content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                            <a href="https://goo.gl/maps/WDNsMSkt9WiiRmq77"><button class="btn btn-success tombol" type="button">View Map</button></a>
+                                            <a href="https://wa.me/6281326486425"><button class="btn btn-success tombol" type="button">Hubungi</button></a>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
                         </div>
                     </div>
                     <div class="container">
@@ -159,9 +164,10 @@
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                                             content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                            <a href="https://goo.gl/maps/WDNsMSkt9WiiRmq77"><button class="btn btn-success tombol" type="button">View Map</button></a>
+                                            <a href="https://wa.me/6281326486425"><button class="btn btn-success tombol" type="button">Hubungi</button></a>
+                                        </div>
                                     </div>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -176,11 +182,12 @@
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                                             content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                            <a href="https://goo.gl/maps/WDNsMSkt9WiiRmq77"><button class="btn btn-success tombol" type="button">View Map</button></a>
+                                            <a href="https://wa.me/6281326486425"><button class="btn btn-success tombol" type="button">Hubungi</button></a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
                     </div>
                     <div class="container">
                         <div class="card mb-3" style="max-width: 540px;">
@@ -193,7 +200,8 @@
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                                             content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                            <a href="https://goo.gl/maps/WDNsMSkt9WiiRmq77"><button class="btn btn-success tombol" type="button">View Map</button></a>
+                                            <a href="https://wa.me/6281326486425"><button class="btn btn-success tombol" type="button">Hubungi</button></a>
                                     </div>
                                 </div>
                             </div>
