Menambahkan produk baru
Menambahkan beberapa produk baru dari tiap umkm

--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
                             <img src="img/produk/Make Sans/Produk Make Sans.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title"><a href="/produk/produk-make-sans.html">Make San's</a></h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                                    content. This content is a little bit longer.</p>
+                                <p class="card-text">
+                                    Tersedia berbagai makanan lauk pauk beserta menerima pesanan katering dengan harga ramah di kantong.
+                                </p>
                                     <div class="d-grid gap-2">
                                         <button class="btn btn-success tombol" type="button"><a href="/produk/produk-make-sans.html">Menu</a></button>
                                     </div>
@@ -114,52 +115,59 @@
                     </div>
                     <div class="col">
                         <div class="card h-100">
-                            <img src="img/image-produk.png" class="card-img-top" alt="...">
+                            <img src="img/produk/Mba Maul/Toko Mba Maul.png" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title"><a href="#">Card title</a></h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                                    content. This content is a little bit longer.</p>
+                                <h5 class="card-title"><a href="produk/produk-mba-maul.html">Siomay & Seblak Mbak Ma'ul</a></h5>
+                                <p class="card-text">
+                                    Menjual serta menerima pesanan makanan ringan mulai dari Siomay, Batagor, Dimsum dan Seblak Aneka Toping.
+                                </p>
                                     <div class="d-grid gap-2">
-                                        <button class="btn btn-success tombol" type="button"><a href="#">Menu</a></button>
+                                        <button class="btn btn-success tombol" type="button"><a href="/produk/produk-mba-maul.html">Menu</a></button>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card h-100">
-                                <img src="img/image-produk.png" class="card-img-top" alt="...">
+                                <img src="img/produk/Bakery Snack & Catering/Produk BSC 3.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title"><a href="#">Card title</a></h5>
-                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                                        content.</p>
+                                    <h5 class="card-title"><a href="/produk/bakery-snack-catering.html">Bakery Snack and Catering</a></h5>
+                                    <p class="card-text">
+                                        Menerima berbagai pesanan kue, snack dan katering makanan.
+                                    </p>
+                                    <br>
                                         <div class="d-grid gap-2">
-                                            <button class="btn btn-success tombol" type="button"><a href="#">Menu</a></button>
+                                            <button class="btn btn-success tombol" type="button"><a href="/produk/bakery-snack-catering.html">Menu</a></button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="card h-100">
-                                    <img src="img/image-produk.png" class="card-img-top" alt="...">
+                                    <img src="img/produk/Pawon Harif/Produk Pawon Harif 1.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title"><a href="#">Card title</a></h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                                            content. This content is a little bit longer.</p>
+                                        <h5 class="card-title"><a href="/produk/produk-pawon-harif.html">Pawon Harif</a></h5>
+                                        <p class="card-text">
+                                            Menjual berbagai jenis jajanan pasar seperti arem-arem, semar mendem, lemper.
+                                        </p>
+                                        <br>
                                             <div class="d-grid gap-2">
-                                                <button class="btn btn-success tombol" type="button"><a href="#">Menu</a></button>
+                                                <button class="btn btn-success tombol" type="button"><a href="/produk/produk-pawon-harif.html">Menu</a></button>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                     <div class="col">
                         <div class="card h-100">
-                            <img src="img/image-produk.png" class="card-img-top" alt="...">
+                            <img src="img/produk/Mba Lubna/Produk Mba Lubna 1.png" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title"><a href="#">Card title</a></h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                                    content. This content is a little bit longer.</p>
+                                <h5 class="card-title"><a href="/produk/produk-mba-lubna.html">Mba Lubna</a></h5>
+                                <p class="card-text">
+                                    Menjual berbagai jenis jajanan kuliner mulai dari Cilok, Kue Lapis dan Susu Jelly.
+                                </p>
+                                <br>
                                     <div class="d-grid gap-2">
-                                        <button class="btn btn-success tombol" type="button"><a href="#">Menu</a></button>
+                                        <button class="btn btn-success tombol" type="button"><a href="/produk/produk-mba-lubna.html">Menu</a></button>
                                     </div>
                                 </div>
                             </div>
@@ -182,13 +190,13 @@
                         <div class="row row-cols-1 row-cols-md-3 g-4 penjahit-category">
                             <div class="col">
                                 <div class="card h-100">
-                                    <img src="img/image-produk.png" class="card-img-top" alt="...">
+                                    <img src="img/produk/Bu Retno/Produk Bu Retno 8.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title"><a href="#">Card title</a></h5>
+                                        <h5 class="card-title"><a href="/produk/produk-bu-retno.html">Penjahit Bu Retno</a></h5>
                                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
                                             content. This content is a little bit longer.</p>
                                             <div class="d-grid gap-2">
-                                                <button class="btn btn-success tombol" type="button"><a href="#">Pesan Sekarang</a></button>
+                                                <button class="btn btn-success tombol" type="button"><a href="/produk/produk-bu-retno.html">Lihat Produk</a></button>
                                             </div>
                                         </div>
                                     </div>
@@ -197,11 +205,11 @@
                                 <div class="card h-100">
                                     <img src="img/image-produk.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title"><a href="#">Card title</a></h5>
+                                        <h5 class="card-title"><a href="/produk/produk-bu-siti.html">Penjahit Bu Siti</a></h5>
                                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
                                             content. This content is a little bit longer.</p>
                                             <div class="d-grid gap-2">
-                                                <button class="btn btn-success tombol" type="button"><a href="#">Pesan Sekarang</a></button>
+                                                <button class="btn btn-success tombol" type="button"><a href="/produk/produk-bu-siti.html">Lihat Produk</a></button>
                                             </div>
                                         </div>
                                     </div>
@@ -225,13 +233,30 @@
                             </div>
                             <div class="col">
                                 <div class="card h-100">
-                                    <img src="img/image-produk.png" class="card-img-top" alt="...">
+                                    <img src="img/produk/Rohmad Bambu/Toko Romhad Bambu.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title"><a href="#">Card title</a></h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                                            content. This content is a little bit longer.</p>
+                                        <h5 class="card-title"><a href="/produk/produk-rohmad-bambu.html">Rohmad Bambu</a></h5>
+                                        <p class="card-text">
+                                            Menjual berbagai macam kerajinan tangan berbahan dasar bambu.
+                                        </p>
+                                        <br>
                                             <div class="d-grid gap-2">
-                                                <button class="btn btn-success tombol" type="button"><a href="#">Lihat Produk</a></button>
+                                                <button class="btn btn-success tombol" type="button"><a href="/produk/produk-rohmad-bambu.html">Lihat Produk</a></button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="card h-100">
+                                        <img src="img/produk/Nuraini Pot/Nuraini Pot.jpeg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title"><a href="https://photos.app.goo.gl/ntj9p6JfWBSU7Y3C7">Pot Batu Kali</a></h5>
+                                            <p class="card-text">
+                                                Menjual berbagai macam pot yang terbuat dari batu kali dengan harga mulai dari Rp 50.000.
+                                            </p>
+                                                <div class="d-grid gap-2">
+                                                    <button class="btn btn-success tombol" type="button"><a href="https://wa.me/6281393758389">Hubungi</a></button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
